--- a/src/Presentation/Nop.Web/App_Data/Localization/defaultResources.nopres.xml
+++ b/src/Presentation/Nop.Web/App_Data/Localization/defaultResources.nopres.xml
@@ -952,7 +952,7 @@
     <Value>Edited a news comment (ID = {0})</Value>
   </LocaleResource>
   <LocaleResource Name="ActivityLog.EditOrder">
-    <Value>Edited an order (ID = {0}). See order notes for details</Value>
+    <Value>Edited an order (Order number = {0}). See order notes for details</Value>
   </LocaleResource>
   <LocaleResource Name="ActivityLog.EditPlugin">
    <Value>Edited a plugin (FriendlyName: '{0}')</Value>
@@ -1458,9 +1458,12 @@
   <LocaleResource Name="Admin.Affiliates.Orders.EndDate.Hint">
     <Value>The end date for the search.</Value>
   </LocaleResource>
-  <LocaleResource Name="Admin.Affiliates.Orders.Order">
+ <LocaleResource Name="Admin.Affiliates.Orders.OrderId">
     <Value>Order ID</Value>
   </LocaleResource>
+  <LocaleResource Name="Admin.Affiliates.Orders.CustomOrderNumber">
+    <Value>Order #</Value>
+  </LocaleResource>    
   <LocaleResource Name="Admin.Affiliates.Orders.OrderStatus">
     <Value>Order status</Value>
   </LocaleResource>
@@ -6549,6 +6552,27 @@
   <LocaleResource Name="Admin.Configuration.Settings.Order.DisableOrderCompletedPage.Hint">
     <Value>When disabled, customers will be automatically redirected to the order details page.</Value>
   </LocaleResource>
+  <LocaleResource Name="Admin.Configuration.Settings.Order.CustomOrderNumberPrefix">
+    <Value>Order number prefix</Value>
+  </LocaleResource> 
+  <LocaleResource Name="Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Description.DD">
+    <Value>{DD} - day of order creation date</Value>
+  </LocaleResource>   
+  <LocaleResource Name="Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Description.ID">
+    <Value>{ID} -Order identifier</Value>
+  </LocaleResource>     
+  <LocaleResource Name="Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Description.MM">
+    <Value>{MM} - month of order creation date</Value>
+  </LocaleResource>
+  <LocaleResource Name="Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Description.YY">
+    <Value>{YY} - last two digits of year of order creation date</Value>
+  </LocaleResource> 
+  <LocaleResource Name="Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Description.YYYY">
+    <Value>{YYYY} - year of order creation date</Value>
+  </LocaleResource>  
+  <LocaleResource Name="Admin.Configuration.Settings.Order.CustomOrderNumberPrefix.Hint">
+    <Value>Order number prefix, for creating custom order number. For example, RE-{YYYY}-{MM}. Leave this field empty if you don't want to use custom order numbers</Value>
+  </LocaleResource>      
   <LocaleResource Name="Admin.Configuration.Settings.Order.IsReOrderAllowed">
     <Value>Is re-order allowed</Value>
   </LocaleResource>
@@ -9348,6 +9372,9 @@
   <LocaleResource Name="Admin.Customers.Customers.Orders.ID">
     <Value>Order ID</Value>
   </LocaleResource>
+  <LocaleResource Name="Admin.Customers.Customers.Orders.CustomOrderNumber">
+    <Value>Order #</Value>
+  </LocaleResource>   
   <LocaleResource Name="Admin.Customers.Customers.Orders.OrderStatus">
     <Value>Order status</Value>
   </LocaleResource>
@@ -9705,12 +9732,18 @@
   <LocaleResource Name="Admin.GiftCards.Fields.Message.Hint">
     <Value>Enter message.</Value>
   </LocaleResource>
-  <LocaleResource Name="Admin.GiftCards.Fields.Order">
+  <LocaleResource Name="Admin.GiftCards.Fields.OrderId">
     <Value>Order</Value>
   </LocaleResource>
-  <LocaleResource Name="Admin.GiftCards.Fields.Order.Hint">
+  <LocaleResource Name="Admin.GiftCards.Fields.OrderId.Hint">
     <Value>The gift card was purchased with this order.</Value>
   </LocaleResource>
+  <LocaleResource Name="Admin.GiftCards.Fields.CustomOrderNumber">
+    <Value>Order</Value>
+  </LocaleResource>
+  <LocaleResource Name="Admin.GiftCards.Fields.CustomOrderNumber.Hint">
+    <Value>The gift card was purchased with this order.</Value>
+  </LocaleResource>  
   <LocaleResource Name="Admin.GiftCards.Fields.RecipientEmail">
     <Value>Recipient's Email</Value>
   </LocaleResource>
@@ -9747,9 +9780,12 @@
   <LocaleResource Name="Admin.GiftCards.History.CreatedOn">
     <Value>Used</Value>
   </LocaleResource>
-  <LocaleResource Name="Admin.GiftCards.History.Order">
-    <Value>Order</Value>
-  </LocaleResource>
+  <LocaleResource Name="Admin.GiftCards.History.OrderId">
+    <Value>Order ID</Value>
+  </LocaleResource>  
+  <LocaleResource Name="Admin.GiftCards.History.CustomOrderNumber">
+    <Value>Order #</Value>
+  </LocaleResource>    
   <LocaleResource Name="Admin.GiftCards.History.UsedValue">
     <Value>Used amount</Value>
   </LocaleResource>
@@ -10053,6 +10089,12 @@
   <LocaleResource Name="Admin.Orders.Fields.OrderGuid.Hint">
     <Value>Internal reference for order.</Value>
   </LocaleResource>
+  <LocaleResource Name="Admin.Orders.Fields.CustomOrderNumber">
+    <Value>Order #</Value>
+  </LocaleResource>
+  <LocaleResource Name="Admin.Orders.Fields.CustomOrderNumber.Hint">
+    <Value>The unique number of this order.</Value>
+  </LocaleResource>    
   <LocaleResource Name="Admin.Orders.Fields.OrderShipping">
     <Value>Order shipping</Value>
   </LocaleResource>
@@ -10657,11 +10699,17 @@
     <Value>No shipments selected</Value>
   </LocaleResource>
   <LocaleResource Name="Admin.Orders.Shipments.OrderID">
-    <Value>Order #</Value>
+    <Value>Order ID</Value>
   </LocaleResource>
   <LocaleResource Name="Admin.Orders.Shipments.OrderID.Hint">
     <Value>The order associated to this shipment.</Value>
   </LocaleResource>
+  <LocaleResource Name="Admin.Orders.Shipments.CustomOrderNumber">
+    <Value>Order #</Value>
+  </LocaleResource>  
+  <LocaleResource Name="Admin.Orders.Shipments.CustomOrderNumber.Hint">
+    <Value>The order associated to this shipment.</Value>
+  </LocaleResource>    
   <LocaleResource Name="Admin.Orders.Shipments.PrintPackagingSlip">
     <Value>Print packaging slip</Value>
   </LocaleResource>
@@ -11103,9 +11151,12 @@
   <LocaleResource Name="Admin.Promotions.Discounts.History.CreatedOn">
     <Value>Used</Value>
   </LocaleResource>
-  <LocaleResource Name="Admin.Promotions.Discounts.History.Order">
+  <LocaleResource Name="Admin.Promotions.Discounts.History.OrderId">
     <Value>Order ID</Value>
   </LocaleResource>
+  <LocaleResource Name="Admin.Promotions.Discounts.History.CustomOrderNumber">
+    <Value>Order #</Value>
+  </LocaleResource>  
   <LocaleResource Name="Admin.Promotions.Discounts.History.OrderTotal">
     <Value>Order total</Value>
   </LocaleResource>
@@ -11316,9 +11367,12 @@
   <LocaleResource Name="Admin.RecurringPayments.History.NextPaymentDate">
     <Value>Next payment date</Value>
   </LocaleResource>
-  <LocaleResource Name="Admin.RecurringPayments.History.Order">
+  <LocaleResource Name="Admin.RecurringPayments.History.OrderId">
+    <Value>Created order ID</Value>
+  </LocaleResource>  
+  <LocaleResource Name="Admin.RecurringPayments.History.CustomOrderNumber">
     <Value>Created order</Value>
-  </LocaleResource>
+  </LocaleResource>      
   <LocaleResource Name="Admin.RecurringPayments.History.OrderStatus">
     <Value>Order status</Value>
   </LocaleResource>
@@ -11379,12 +11433,12 @@
   <LocaleResource Name="Admin.ReturnRequests.Fields.CustomNumber.Hint">
     <Value>Return request identifier.</Value>
   </LocaleResource>
-  <LocaleResource Name="Admin.ReturnRequests.Fields.Order">
-    <Value>Order</Value>
+  <LocaleResource Name="Admin.ReturnRequests.Fields.OrderId">
+    <Value>Order ID</Value>
   </LocaleResource>
-  <LocaleResource Name="Admin.ReturnRequests.Fields.Order.Hint">
-    <Value>Order information.</Value>
-  </LocaleResource>
+  <LocaleResource Name="Admin.ReturnRequests.Fields.CustomOrderNumber">
+    <Value>Order #</Value>
+  </LocaleResource>  
   <LocaleResource Name="Admin.ReturnRequests.Fields.Product">
     <Value>Product</Value>
   </LocaleResource>
