Issue 2059 Add attributes description on return request list page

--- a/src/Presentation/Nop.Web/App_Data/Localization/defaultResources.nopres.xml
+++ b/src/Presentation/Nop.Web/App_Data/Localization/defaultResources.nopres.xml
@@ -11466,6 +11466,12 @@
   <LocaleResource Name="Admin.ReturnRequests.EditReturnRequestDetails">
     <Value>Edit return request details</Value>
   </LocaleResource>
+  <LocaleResource Name="Admin.ReturnRequests.Fields.AttributeDescription">
+    <Value>Attributes</Value>
+  </LocaleResource>
+  <LocaleResource Name="Admin.ReturnRequests.Fields.AttributeDescription.Hint">
+    <Value>Product attributes information.</Value>
+  </LocaleResource>
   <LocaleResource Name="Admin.ReturnRequests.Fields.CreatedOn">
     <Value>Date</Value>
   </LocaleResource>
